--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <li id="first-line" class="dollar">Welcome to <strong>LuminOS™</strong><br></li>
         <li id="second-line" class="dollar">You are about to experience the beta version of Lite Operating System™ (version 1.1.0). LuminOS™ is designed to be a clean system perfect for old devices incapable of updates or anyone who wants to experience <strong>total</strong> comfort from within their screens<br></li>
         <li class="dollar"></li>
-        <li class="dollar">LuminOS™ is designed by Oscar Nicholas. Enjoy the experience</li>
+        <li class="dollar">LuminOS™ is designed by <strong><a href="https://github.com/incogweb" target="_blank">incogweb</a></strong>. Enjoy the experience</li>
         <li class="dollar"> <a href="luminos.html">Click here to launch LuminOS™</a> <span class="typing">|</span></li>
     </ul>
     <script src="fun.js"></script>
